--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -18,12 +18,11 @@ body {
 }
 
 #toolbarDiv {
-	height: 72px;
+	height: 51px; /* 72 */
 	top: 0;
-	padding-top: 7px;
+	padding-top: 5px;
 	border-bottom: 1px solid #cecece; /* 5px solid #eaba72; */
 	z-index: 1;
-	background-color: #f0f0f0; /* #f1f2ed; */
   background: -webkit-linear-gradient(top, white, #f0f0f0);
   background: -moz-linear-gradient(top, white, #f0f0f0);
   background: -ms-linear-gradient(top, white, #f0f0f0);
@@ -61,7 +60,7 @@ iframe#oViewPane {
 	width: 100%;
 	height: 100%;
 	z-index: 0;
-	padding-top: 72px;
+	padding-top: 51px; /* 72 */
 }
 
 div#_md_blank.window_disable h1 {
