--- a/gtpb_clientside/WEB-INF/templates/gui/resources/pane3_tab_set.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/pane3_tab_set.vm
@@ -16,9 +16,10 @@
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Strict//EN">
+#set($table = $sessionData.getTable())
 <html>
   <head>
-	<title>$sessionData.getTable() data</title>
+	<title>$table data</title>
 	#if($mobile_device)
 		<link href="resources/mobile/pane3_amalgam.css" type="text/css" rel="stylesheet" />
 	#else
@@ -52,14 +53,14 @@
 	    });
 	    </script>
 	#else
-    	<script type="text/javascript" src="resources/pane3_amalgam.js"></script>
+    <script type="text/javascript" src="resources/pane3_amalgam.js"></script>
 		##<!-- <script type="text/javascript" src="resources/jquery.bgiframe.js"></script> -- is this still necessary in new IE versions? -->
 		## These CSS seem to be seen by FF as well!
 		##<!--[if IE]>
 		##<link rel="stylesheet" type="text/css" href="resources/tabs/tabs-ie.css" />
 		##<link rel="stylesheet" type="text/css" href="resources/tabs/edit-ie.css" />
 		##<![endif]-->
-		#if($view.loggedInUserAllowedTo("MANAGE_TABLE",$sessionData.getTable()))
+		#if($view.loggedInUserAllowedTo("MANAGE_TABLE",$table))
       <script type="text/javascript" src="resources/jquery.tablednd.js"></script>
 		  <script type="text/javascript" src="resources/edit_area/edit_area_full.js"></script>
 		  <script type="text/javascript" src="resources/modalFramework/modalFramework.js"></script>
@@ -204,7 +205,11 @@
     #end ## end if not mobile device
 	#set($currentTab = $sessionData.getCustomString('report_tabindex'))
 	#if(!$currentTab)
-		#set($currentTab = "1")
+    #if($view.loggedInUserAllowedTo('EDIT_TABLE_DATA',$table))
+      #set($currentTab = "2")
+    #else
+		  #set($currentTab = "1")
+    #end
 	#end		
 	#if(($pane2_id) && (!$mobile_device))
   	  <script language=Javascript>
