--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -45,6 +45,12 @@ body {
 	margin-right: 7px;
 }
 
+#logo {
+  float: left;
+  margin-left: 20px;
+  width: 180px;
+}
+
 #toolbarDiv div.buttonGroup {
 	margin-left: 3em;
 	/* formerly 30px */
