--- a/gtpb_clientside/resources/modalFramework/modalFramework.css
+++ b/gtpb_clientside/resources/modalFramework/modalFramework.css
@@ -55,7 +55,7 @@ div#_md_blank div#_md_dialog div#_md_toolbar {
   position:absolute;
   bottom:0;
   border-top:1px solid #A09F9A;
-  background-color:#F1F2ED;
+  background-color:#f4f4f4;
   text-align:right;
 }
 
