--- a/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
@@ -39,7 +39,7 @@
     #navigation { position:absolute; 
                   height:100%;
                   width:120px;
-                  background-color:#f1f2ed;
+                  background-color:#f4f4f4;
                   border-top:2px solid #cccccc;
                   border-right:1px solid #cecece;
                   top:0;
