--- a/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/printouts/pane2_printout_wrapper.vm
@@ -54,7 +54,7 @@
 			padding-top:7px; 
 			border-bottom:5px solid #eaba72;
 	        z-index:1;
-	        background-color:#f1f2ed; 
+	        background-color:#f4f4f4; 
 	        position:absolute; 
 	        left:0px; 
 	        width:100%; 
