--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_view.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_view.vm
@@ -72,9 +72,9 @@
           #if((($printoutSetting == "NAME_AND_VALUE") || ($printoutSetting == "NAME_VALUE_LINEBREAK")) && ($fieldCategory != "REFERENCED_REPORT_DATA"))
             <!-- class printoutfieldnamecolumn is only defined when printing - see detail.vm -->
             #if($field.getClass().getSimpleName().equals("RelationFieldDefn"))
-              <span class="fieldname">$field.getSimplifiedFieldName()</span>
+              <span class="fieldname"><b>$field.getSimplifiedFieldName()</b></span>
             #else
-              <span class="fieldname">$field</span>
+              <span class="fieldname"><b>$field</b></span>
             #end
             : #parse('gui/resources/input/input.vm')
             #if($printoutSetting == "NAME_VALUE_LINEBREAK")<br>#end
