--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -199,8 +199,7 @@ div#_md_blank.window_disable h1 {
     position:absolute;
 	font-family: arial, helvetica, sans-serif;
 	opacity: 0.9;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
+	border-radius: 4px;
 }
 
 #key {
