--- a/gtpb_clientside/website/a3/a3.css
+++ b/gtpb_clientside/website/a3/a3.css
@@ -168,10 +168,8 @@ html, body {
 .actions_area.left {
 	left: 0px;
 	border-left-width: 0px;
-	-moz-border-radius-topright: 20px;
-	-moz-border-radius-bottomright: 20px;
-	-webkit-border-top-right-radius: 20px;
-	-webkit-border-bottom-right-radius: 20px;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
 	-moz-box-shadow: 10px 10px 5px #888;
 	-webkit-box-shadow: 10px 10px 5px #888;
 	box-shadow: 10px 10px 5px #888;
@@ -180,10 +178,8 @@ html, body {
 .actions_area.right {
 	right: 0px;
 	border-right-width: 0px;
-	-moz-border-radius-topleft: 20px;
-	-moz-border-radius-bottomleft: 20px;
-	-webkit-border-top-left-radius: 20px;
-	-webkit-border-bottom-left-radius: 20px;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
 	-moz-box-shadow: -10px 10px 5px #888;
 	-webkit-box-shadow: -10px 10px 5px #888;
 	box-shadow: -10px 10px 5px #888;
@@ -203,7 +199,6 @@ input[type=button], button {
 			outline-width: 0;
 			border: 1px solid #000;
 			border-radius: 50px;
-			-moz-border-radius: 50px;
 			
 			-webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5);
 			-moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5),
@@ -274,7 +269,7 @@ button#next_report {
 }
 
 input {
-  -moz-border-radius: 5px;
+  border-radius: 5px;
 }
 
 #search {
