--- a/gtpb_clientside/website/styles/styles.css
+++ b/gtpb_clientside/website/styles/styles.css
@@ -527,8 +527,7 @@ td.selected {
 	padding: 5px 5px 5px 55px;
 	top: -1.4em;
 	z-index: 100;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
+	border-radius: 3px;
 }
 
 /* Block quotes */
