Remove th borders in pane 2

--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -22,7 +22,7 @@ table#reportData th {
   font-size:10pt; 
   color:black;
   font-weight:bold;
-  border:1px solid white; /* #cecece */
+  border:1px solid #f0f0f0; /* #cecece */
   border-top: 0px;
   padding:5px;
   text-align:left;
