Remove th borders in pane 2

--- a/gtpb_clientside/resources/modalFramework/modalFramework.css
+++ b/gtpb_clientside/resources/modalFramework/modalFramework.css
@@ -179,7 +179,7 @@ div#_md_blank div#_md_dialog div#_md_content table#reportData th div {
 }
 
 div#_md_blank div#_md_dialog div#_md_content table#reportData thead tr#fieldFilters { 
-  background-color:#dddddd; 
+  background-color:white; 
 }
 
 div#_md_blank div#_md_dialog div#_md_content table#reportData thead tr#fieldFilters input { 
