--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -85,6 +85,7 @@ div#wrapper table#reportData #fieldFilters td {
 
 table#reportData thead tr#fieldFilters input { 
   width:100%;
+  border-radius: 0.5em;
 }
 					  
 table#reportData thead td { 
