--- a/gtpb_clientside/resources/modalFramework/modalFramework.css
+++ b/gtpb_clientside/resources/modalFramework/modalFramework.css
@@ -185,6 +185,7 @@ div#_md_blank div#_md_dialog div#_md_content table#reportData thead tr#fieldFilt
 div#_md_blank div#_md_dialog div#_md_content table#reportData thead tr#fieldFilters input { 
   width:100%;
   border-radius: 0.5em;
+  border: 1px solid #cecece;
 }
 					  
 div#_md_blank div#_md_dialog div#_md_content table#reportData thead td { 
