--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -46,20 +46,11 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
     #set($cloned_record = true)
   #end
 	  <table cellspacing="0" cellpadding="0" border="0" id="reportData" #if($cloned_record) style="background:url('styles/cloned.png') no-repeat top right !important;" #end>
-			#if(!$mobile_device)
-			  <thead>
-		      <tr>
-		        #if($edit_nav)
-              <th>&nbsp;</th>
-              <th>Edit $sessionTable.getSingularName()</th>
-            #else
-		          <th colspan="4">
-                <button id="hide_pane_3" onClick="top.hidePane3();">done</button>
-                <div class="mini_action"><a href="javascript:top.fLinks();"><img src="resources/icons/applications/tango/actions/mail-closed.png" />&nbsp;link...</a></div>
-              </th>
-            #end
-		      </tr>
-		    </thead>
+			#if(!$mobile_device && !$edit_nav)
+        <div style="position:absolute;">
+          <button id="hide_pane_3" onClick="top.hidePane3();">done</button>
+        </div>
+          <div class="mini_action" style="position:absolute"><a href="javascript:top.fLinks();"><img src="resources/icons/applications/tango/actions/mail-closed.png" />&nbsp;link...</a></div>
 			#end
 		    #set($tableDataRow=$view.getTableDataRow())
 		    #if ($tableDataRow.size() == 0)
